testdata/baselines/reference/submodule/conformance/jsdocReadonlyDeclarations.errors.txt
jsdocReadonlyDeclarations.js(2,9): error TS8009: The 'readonly' modifier can only be used in TypeScript files.
jsdocReadonlyDeclarations.js(14,1): error TS2554: Expected 1 arguments, but got 0.


==== jsdocReadonlyDeclarations.js (2 errors) ====
    class C {
        /** @readonly */
            ~~~~~~~~~~
!!! error TS8009: The 'readonly' modifier can only be used in TypeScript files.
        x = 6
        /** @readonly */
        constructor(n) {
            this.x = n
            /**
             * @readonly
             * @type {number}
             */
            this.y = n
        }
    }
    new C().x
    ~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 0.
!!! related TS6210 jsdocReadonlyDeclarations.js:5:17: An argument for 'n' was not provided.
    
    function F() {
        /** @readonly */
        this.z = 1
    }
    
    // https://github.com/microsoft/TypeScript/issues/38401
    class D {
        constructor(/** @readonly */ x) {}
    }
    